Fix text wrapping problems for long title on collapsible section headers (ES2LR57)

--- a/web/src/main/resources/public/style/eureka-apps.css
+++ b/web/src/main/resources/public/style/eureka-apps.css
@@ -551,6 +551,8 @@ table.eureka-table tr.header-row-top-headers th
 	font-weight:bold;
 	color:#444;
 	position: relative;
+	white-space: nowrap;
+	overflow: hidden;
 }
 .title-bar.collapsed
 {
